{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 12,
  "lineage": "81c8949e-843d-b6e4-6c58-026daaf2985a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0127832cab03cc79a",
            "domain": "vpc",
            "id": "eipalloc-02a9a653f49a2896e",
            "instance": "i-03551c830090a5a65",
            "network_interface": "eni-00adedff2bc7a80b4",
            "private_dns": "ip-10-1-1-208.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.208",
            "public_dns": "ec2-3-114-242-233.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.114.242.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.this_t2",
            "aws_security_group.this",
            "aws_subnet.public_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this_t2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011facbea5ec0363b",
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:instance/i-03551c830090a5a65",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03551c830090a5a65",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-00adedff2bc7a80b4",
            "private_dns": "ip-10-1-1-208.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-041fcb3c84a4906a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017b6561d32b9211d",
            "tags": {
              "Name": "tf-ecs"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8b56ec8acdd2856"
            ]
          },
          "dependencies": [
            "aws_security_group.this",
            "aws_subnet.public_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02597ebd0b842b830",
            "owner_id": "193546543446",
            "vpc_id": "vpc-023548ccafadfefbd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0272f02d913274ae9",
            "owner_id": "193546543446",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02597ebd0b842b830",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-023548ccafadfefbd"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fa8a4bd6e58c37e",
            "route_table_id": "rtb-0272f02d913274ae9",
            "subnet_id": "subnet-017b6561d32b9211d"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e2ef12c5b2399a",
            "route_table_id": "rtb-0272f02d913274ae9",
            "subnet_id": "subnet-070dc208c055b509d"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:security-group/sg-0f8b56ec8acdd2856",
            "description": "tf-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8b56ec8acdd2856",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "APP_SG",
            "name_prefix": null,
            "owner_id": "193546543446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-023548ccafadfefbd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:subnet/subnet-017b6561d32b9211d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-017b6561d32b9211d",
            "map_public_ip_on_launch": false,
            "owner_id": "193546543446",
            "tags": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-023548ccafadfefbd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:subnet/subnet-070dc208c055b509d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-070dc208c055b509d",
            "map_public_ip_on_launch": false,
            "owner_id": "193546543446",
            "tags": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-023548ccafadfefbd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:193546543446:vpc/vpc-023548ccafadfefbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e76021ae9f0bb40c",
            "default_route_table_id": "rtb-0c727397d965a2565",
            "default_security_group_id": "sg-02c6ea219828191ac",
            "dhcp_options_id": "dopt-a1cce1c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-023548ccafadfefbd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c727397d965a2565",
            "owner_id": "193546543446",
            "tags": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}